# correttore

./: .gitignore  .gitignore.md  .llm_cache.pkl  ANALISI_OTTIMIZZAZIONE.md  CHANGELOG.md  COME_AVVIARE.md  CONTRIBUTING.md  DEBUG_REPORT_20251110.md  FASE1_COMPLETATA.md  FASE1_COMPLETATA_REPORT.md  FASE2_COMPLETATA.md  FASE2_COMPLETATA_REPORT.md  FASE3_ORGANIZZAZIONE_DOCS_REPORT.md  FASE5_CONFIG_CONSOLIDATION_REPORT.md  FASE6_TOOLS_BIN_CLEANUP_REPORT.md  FIX_IMPORT_LEGACY_REPORT.md  FIX_REPORT_HTML_DASHBOARD.md  PIANO_PULIZIA_CODEBASE.md  QUICK_TEST_REFERENCE.md  README.md  REPORT_CORRIGE_COMPLETATO.md  Sinossi Timeo Bookdealer.docx  benchmark_startup.py  config.yaml  config_historical.yaml  config_italiano_ottimizzato.yaml  config_optimized.yaml  config_precisione_massima.yaml  config_precisione_massima_fixed.yaml  config_premium.yaml  correttore.py  glossario.txt  glossario_extra.json  grammarcheck.py  llm_correct.py  main.py  precheck.py  pyproject.toml  pytest.ini  reports.py  (+17 more)
.cache/: corrections_cache.db
.test_cache/: corrections_cache.db
backups/: 20250820_171436_LASCIO_DI_SCRIVERE_20250820_171446_backup.backup.json  20250821_093104_LASCIO_DI_SCRIVERE_20250821_093113_backup.backup.json  20250821_110321_LASCIO_DI_SCRIVERE_20250821_110331_backup.backup.json  20250821_110321_LASCIO_DI_SCRIVERE_20250821_110332_backup.backup.json  20250821_113822_LASCIO_DI_SCRIVERE_20250821_113832_backup.backup.json  20250821_114319_LASCIO_DI_SCRIVERE_20250821_114326_backup.backup.json  20250821_140630_LASCIO_DI_SCRIVERE_20250821_140711_backup.backup.json  20250821_140630_LASCIO_DI_SCRIVERE_20250821_140712_backup.backup.json  20250821_172303_bruma_20250821_172347_backup.backup.json  20250825_091120_racconto_20250825_091156_backup.backup.json  20250825_093618_racconto_20250825_093644_backup.backup.json  20250825_110739_racconto_20250825_110809_backup.backup.json  20250828_093400_racconto_20250828_093431_backup.backup.json  20250828_100018_racconto_20250828_100047_backup.backup.json  20250828_102833_racconto_20250828_102837_backup.backup.json  20250828_103011_racconto_20250828_103043_backup.backup.json  20250828_121102_racconto_20250828_121149_backup.backup.json  20250902_093259_racconto_20250902_093344_backup.backup.json  terenzi_20250820_110417_backup.backup.json  terenzi_20250902_095004_backup.backup.json  terenzi_20250902_105244_backup.backup.json  test_errori_20250825_113249_backup.backup.json  test_errori_20250825_120221_backup.backup.json  test_errori_20250902_094949_backup.backup.json  test_errori_20250902_104806_backup.backup.json  test_errori_20250902_105231_backup.backup.json  test_errori_20250902_110359_backup.backup.json  test_errori_20250902_110839_backup.backup.json  test_errori_20250902_111000_backup.backup.json  test_errori_20250902_120248_backup.backup.json  test_errori_20250902_121115_backup.backup.json  test_input_20250821_090950_backup.backup.json  test_input_20250821_143846_backup.backup.json  test_quality_fix_20250822_111708_backup.backup.json  test_quality_fix_20250825_090555_backup.backup.json
config/: __init__.py  languagetool_whitelist.txt  settings.py
core/: __init__.py  correction_engine.py  document_handler.py  error_handling.py
data/: custom_corrections.txt  feedback_export.json  glossario_extra.json  glossario_storico.txt
docs/: CHANGELOG_GULPEASE.md  COME_AVVIARE.md  FASE3_COMPLETATA.md  FASE5_COMPLETATA.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN_DOCUMENT_ANALYZER.md  IMPLEMENTAZIONE_WEB_LEGGIBILITA.md  MIGRATION_REPORT.md  MODIFICHE_SOGLIE.md  PROGETTO_100_COMPLETO.md  QUICKSTART.md  README.md  README_ENTERPRISE.md
examples/: esempio_fase3.py  example_report_integration.py  test_corrige_report.py  test_report_generator.py  vocabulary_enhanced_correction.py
scripts/: __init__.py  analyze_readability.py  create_test.py  diagnose_correction.py  dump_rules.py  install_languagetool.py  languagetool_launcher.py  languagetool_manager.py  lt_diagnose.py  monitoring.py  run_corpus_eval.py  run_tests.py  setup_historical_mode.py  simple_lt_starter.py  start_languagetool.py
services/: __init__.py  cache_service.py  languagetool_service.py  openai_service.py  parallel_processor.py
templates/: dashboard.html  dashboard_feedback.css  dashboard_feedback.html  dashboard_feedback.js  index.html  load_test_data.html
tests/: README.md  __init__.py  conftest.py  demo_readability.py  test_analisi_paragrafi.py  test_api_readability.py  test_corrections.py  test_document_analyzer.py  test_endtoend.py  test_engine_integration.py  test_fase4_optimization.py  (+16 more)
(+146 files in other folders)
