[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correttore"
version = "2.0.0"
description = "Enterprise Italian Text Correction System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Marco LP", email = "your.email@example.com"}
]
keywords = ["nlp", "italian", "correction", "grammar", "spell-check"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openai>=1.84.0",
    "python-docx>=1.1.2",
    "pyyaml>=6.0.2",
    "flask>=3.0.0",
    "werkzeug>=3.0.1",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
    "language_tool_python>=2.9.4",
    "python-dotenv>=1.1.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24.0",
    "black>=22.0",
    "mypy>=0.990",
    "flake8>=5.0",
]

[project.scripts]
correttore = "correttore.__main__:main"
correttore-cli = "correttore.interfaces.cli:main"
correttore-web = "correttore.interfaces.web_interface:main"
correttore-analyze = "correttore.utils.readability:main_cli"

[project.urls]
Homepage = "https://github.com/MarcoLP1822/correttore"
Documentation = "https://github.com/MarcoLP1822/correttore/docs"
Repository = "https://github.com/MarcoLP1822/correttore"
Issues = "https://github.com/MarcoLP1822/correttore/issues"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
correttore = ["py.typed", "data/**/*", "templates/**/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=correttore --cov-report=html --cov-report=term"
